[package]
name = "dumpcode"
version = "0.1.0"
edition = "2021"
authors = ["Michal Kurek mkurek@college.harvard.edu"]
description = "A utility that dumps project files in an LLM-friendly format"
license-file = "LICENSE.md"
repository = "https://github.com/MKJM2/dumpcode"
readme = "README.md"
keywords = ["code", "dump", "cli", "llm", "files"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
camino = "1.1.9"
clap = "4.5.31"
ignore = "0.4.23"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
