[package]
name = "dumpcode"
version = "0.2.0"
edition = "2021"
authors = ["Michal Kurek mkurek@college.harvard.edu"]
description = "A utility that dumps project files in an LLM-friendly format"
license = "MIT"
repository = "https://github.com/MKJM2/dumpcode"
readme = "README.md"
keywords = ["code", "dump", "cli", "llm", "files"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
camino = "1.1.9"
charset = "0.1.5"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.11.6"
ignore = "0.4.23"
lazy_static = "1.5.0"
log = "0.4.26"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
